--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header class="bg-slate-300 relative lg:pb-80 pb-32">
+    <header class="bg-slate-300 relative lg:pb-80 md:pb-56 pb-32">
       <nav class="flex justify-between items-center w-11/12 mx-auto py-10">
         <h1 class="text-2xl font-bold">Hot Gadgets</h1>
         <button class="bg-blue-600 px-7 py-3 text-white rounded-lg">
@@ -47,10 +47,10 @@
     </div>
 
     <!-- products -->
-    <section class="w-11/12 mx-auto lg:mt-72 mt-28 lg:pb-52">
+    <section class="w-11/12 mx-auto lg:mt-72 md:mt-44 mt-28 lg:pb-52">
       <h4 class="text-center text-3xl font-bold">Search your phone</h4>
       <div
-        class="flex justify-center items-center mt-5 lg:w-3/5 w-11/12 mx-auto mb-10"
+        class="flex justify-center items-center mt-5 md:w-3/5 w-11/12 mx-auto mb-10"
       >
         <input
           id="search-box"
@@ -69,7 +69,7 @@
       <div id="spinner" class="text-center hidden">
         <span class="loading loading-infinity loading-lg"></span>
       </div>
-      <div class="grid lg:grid-cols-4 grid-cols-1 gap-4">
+      <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4">
         <!-- daynamic -->
         <div
           class="flex flex-col justify-center items-center space-y-3 border rounded p-2"
@@ -95,7 +95,7 @@
     <footer class="bg-slate-300 py-16">
       <section class="w-11/12 mx-auto">
         <div
-          class="flex lg:flex-row flex-col justify-between items-center mb-5"
+          class="flex md:flex-row flex-col justify-between items-center mb-5"
         >
           <div>
             <h1 class="text-2xl font-bold mb-2">Hot Gadgets</h1>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <hr class="text-blue-600" />
-        <div class="mt-5 grid lg:grid-cols-4 grid-cols-2 gap-5 justify-between">
+        <div class="mt-5 grid md:grid-cols-4 grid-cols-2 gap-5 justify-between">
           <div class="flex flex-col">
             <a href="">Product </a>
             <a href="">Browse jobs</a>
