--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <!-- products -->
-    <section class="w-11/12 mx-auto lg:mt-72 md:mt-44 mt-28 lg:pb-52">
+    <section class="w-11/12 mx-auto lg:mt-72 md:mt-44 mt-28">
       <h4 class="text-center text-3xl font-bold">Search your phone</h4>
       <div
         class="flex justify-center items-center mt-5 md:w-3/5 w-11/12 mx-auto mb-10"
@@ -69,9 +69,12 @@
       <div id="spinner" class="text-center hidden">
         <span class="loading loading-infinity loading-lg"></span>
       </div>
-      <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4">
+      <div
+        id="phones-container"
+        class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4"
+      >
         <!-- daynamic -->
-        <div
+        <!-- <div
           class="flex flex-col justify-center items-center space-y-3 border rounded p-2"
         >
           <img class="bg-slate-200 rounded" src="image.png" alt="" />
@@ -79,7 +82,7 @@
           <p class="text-gray-500">Description</p>
           <h3 class="text-xl font-bold">Price</h3>
           <button class="bg-blue-600 px-6 py-2 text-white">show Details</button>
-        </div>
+        </div> -->
         <!-- daynamic -->
       </div>
       <div class="text-center my-10">
@@ -91,6 +94,13 @@
         </button>
       </div>
     </section>
+
+    <!-- modal ---------------------->
+
+    <!-- Open the modal using ID.showModal() method -->
+
+    <div id="modal-container"></div>
+    <!-- modal -------------------------->
 
     <footer class="bg-slate-300 py-16">
       <section class="w-11/12 mx-auto">
