some problem sloved

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -72,19 +72,7 @@
       <div
         id="phones-container"
         class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4"
-      >
-        <!-- daynamic -->
-        <!-- <div
-          class="flex flex-col justify-center items-center space-y-3 border rounded p-2"
-        >
-          <img class="bg-slate-200 rounded" src="image.png" alt="" />
-          <h3 class="text-2xl font-bold">Phone Name</h3>
-          <p class="text-gray-500">Description</p>
-          <h3 class="text-xl font-bold">Price</h3>
-          <button class="bg-blue-600 px-6 py-2 text-white">show Details</button>
-        </div> -->
-        <!-- daynamic -->
-      </div>
+      ></div>
       <div class="text-center my-10">
         <button
           onclick="handleShowAll()"
